chore: scaffold webapi

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@polyglot-melting-pot/generated/webapi-types": [
+        "libs/generated/webapi-types/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
